--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "debug": "^4.1.1",
+    "express": "^4.18.2",
     "kcors": "^2.2.2",
     "koa": "^2.13.0",
     "koa-json": "^2.0.2",
